src/test/deca/syntax/parser/valid/invalid_float_format_point_letter.deca
// Parser test, invalid float format 

{
    float x = 5.a;
}