src/test/deca/syntax/parser/invalid/declaration_var_wrong.deca
{
    int x 5;
}

//# src/test/deca/syntax/parser/invalid/declaration_var_wrong.deca:2:10: extraneous input '5' expecting ';'
